nav collapse fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,5 +86,5 @@ a {
   max-height: 25px;
   height: 100%;
   background-color: rgb(var(--pri-clr-drk));
-  width: 100vw;
+  width: 100%;
 }
